--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,12 @@ body{
 p{
     font-family:montserrat, sans-serif ;
 }
+
 /* header and links */
 header{
     background-color: #fafafa;
     width: 100%;
-    height: 100px;
+    height: 6rem;
     text-align: center;
     font-size: 120%;    
     text-transform: capitalize;
@@ -75,7 +76,7 @@ header h1{
 #hero{
     background: url(/assets/images/meat-cuts.jpeg) no-repeat center center;
     width: 100%;
-    height: 600px;
+    height: 37rem;
     clear: both;
     border: none;
     padding: 0;
@@ -90,8 +91,8 @@ header h1{
     width: auto;
     height: auto;
     border-radius: 25px 0;
-    top: 100px;
-    left: 250px; 
+    top: 15%;
+    left: 15%; 
     position: absolute; 
     border: 2px solid black;
     text-align: center;
@@ -101,13 +102,23 @@ header h1{
     z-index: 3; 
 }
 /*lamb*/
+#lamb-section{
+    width: 100%;
+    height: 51%;
+    background-color: yellow;
+    position: absolute;
+}
 #cover-image-lamb{
     border-radius: 25px 0;       
-    top: 750px;
-    right: 50px;  
+    top: 16%;
+    right: 1%;  
     background-repeat:no-repeat; 
     overflow: hidden;
     
+}
+#cover-image-lamb img{
+    width: 100%;
+    height: 100%;
 }
 #cover-image-lamb-cuts{
     border-radius: 25px 0;    
@@ -115,140 +126,170 @@ header h1{
     top: 750px;
     left: 50px;    
 }
-#cover-text-lamb{
-    width: 800px;
+#lamb-description{
+    width: 42%;
     height: auto;
     border-radius: 25px 0;
-    top: 840px;
-    left: 250px;      
+    top: 32%;
+    left: 22%;      
 }
 #lamb{
     text-align: center;
+    
 }
 .lamb-hr-left{
     position: absolute;
-    left: 150px;
+    left: 3%;
+    top: 7.5%;
 }
 .lamb-hr-right{
     position: absolute;
-    right: 150px;
-    top: 718px;
+    right: 3%;
+    top: 7.5%;
 }
 /* poultry */
+#poultry-section{
+    width: 100%;
+    height: 51%;
+    background-color: lime;
+    position: absolute;
+    top: 146%;
+}
 #poultry-image{
     border-radius: 0 25px;
     background-repeat: no-repeat;
-    top: 1050px;
-    left: 50px;
+    top: 16%;
+    left: 1%;
     overflow: hidden;
+}
+#poultry-image img{
+    width: 100%;
+    height: 100%;
 }
 #poultry-cuts{
     border-radius: 25px 0;    
     background-repeat: no-repeat;  
-    top: 1100px;
-    right: 50px;  
+    top: 24%;
+    right: 0;  
     position: absolute;  
 }
-#cover-text-poultry{
-    width: 750px;
+#poultry-description{
+    width: 42%;
     height: auto;
     border-radius:0 25px ;
-    top: 1130px;
-    left: 480px;  
+    top: 34%;
+    left: 36%;  
 }
 #poultry{
     text-align: center;
-    position: absolute;
-    top: 967px;
-    left: 675px;
-}
+    }
 .poultry-hr-left{
     position: absolute;
-    left: 150px;
-    top: 1018px;
+    left: 3%;
+    top: 7.5%;    
 }
 .poultry-hr-right{
     position: absolute;
-    right: 150px;
-    top: 1018px;
+    right: 3%;
+    top: 7.5%;
 }
 /*beef*/
-#cover-image-beef{
+#beef-section{
+    width: 100%;
+    height: 51%;
+    background-color: rgb(0, 225, 255);
+    position: absolute;
+    top: 197%;
+}
+#beef-image{
     border-radius: 0 25px;   
-    background: url(/assets/images/cows.jpeg) no-repeat center center ;
-    top: 1350px;
-    right: 50px;    
+    background-repeat: no-repeat;
+    top: 16%;
+    right: 1%;
+    overflow: hidden;    
+}
+#beef-image img{
+    width: 100%;
+    height: 100%;
 }
 #beef-cuts{
     border-radius: 25px 0;    
     background-repeat: no-repeat;  
-    top: 1380px;
-    left: 50px;  
+    top: 28%;
+    left: 0;  
     position: absolute;  
 }
-#cover-text-beef{
-    width: 800px;
+#beef-description{
+    width: 43%;
     height: auto;
     border-radius: 25px 0;
-    top: 1450px;
-    left: 250px;      
+    top: 25%;
+    left: 21%;      
 }
 #beef{
     text-align: center;
-    position: absolute;
-    top: 1273px;
-    left: 675px;
+    
 }
 .beef-hr-left{
     position: absolute;
-    left: 150px;
-    top: 1325px;
+    left: 3%;
+    top: 7.5%;
 }
 .beef-hr-right{
     position: absolute;
-    right: 150px;
-    top: 1325px;
+    right: 3%;
+    top: 7.5%;
 }
 /* pork */
+#pork-section{
+    width: 100%;
+    height: 51%;
+    background-color: rgb(255, 153, 0);
+    position: absolute;
+    top: 248%;
+}
 #pork-image{
     border-radius: 0 25px;
     background-repeat: no-repeat;
-    top: 1650px;
-    left: 50px;
+    top: 15%;
+    left: 1%;
     overflow: hidden;
+}
+#pork-image img{
+    width: 100%;
+    height: 100%;
 }
 #pork-cuts{
     border-radius: 25px 0;    
     background-repeat: no-repeat;  
-    top: 1650px;
-    right: 50px;  
-    position: absolute;  
+    top: 28%;
+    right:0;  
+    position: absolute; 
+    
 }
-#cover-text-pork{
-    width: 600px;
+#pork-description{
+    width: 42%;
     height: auto;
-    border-radius: 25px 0;
-    top: 1750px;
-    left: 400px;  
+    border-radius:0 25px ;
+    top: 29%;
+    left:35%;  
 }
 #pork{
     text-align: center;
-    position: absolute;
-    top: 1573px;
-    left: 675px;
+    
 }
 .pork-hr-left{
     position: absolute;
-    left: 150px;
-    top: 1625px;
+    left: 3%;
+    top: 7.5%;
 }
 .pork-hr-right{
     position: absolute;
-    right: 150px;
-    top: 1625px;
+    right: 3%;
+    top: 7.5%;
 }
 /* communal styles */
-#cover-text-poultry, #cover-text-pork,#cover-text-beef, #cover-text-lamb{
+#poultry-description, #pork-description,#beef-description, #lamb-description{
     border: 2px solid black;
     text-align: center;
     position: absolute;
@@ -256,9 +297,9 @@ header h1{
     color: #fafafa;
     z-index: 3;  
 }
-#poultry-image, #pork-image, #cover-image-lamb, #cover-image-beef{
-    width: 450px;
-    height: 250px;
+#poultry-image, #pork-image, #cover-image-lamb, #beef-image{
+    width: 36%;
+    height:67%;
     border: 5px solid black;
     position: absolute;
     margin: 0;
@@ -267,7 +308,7 @@ header h1{
 
 }
 hr{
-    width: 450px;
+    width: 35%;
     height: 2px;
     color: black;
     background-color: black;
