--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,18 +16,104 @@ p{
 
 /* header and links */
 header{
-    background-color: #fafafa;
+    background-color: #cfe602;
     width: 100%;
-    height: 6rem;
+    height: 7rem;
     text-align: center;
     font-size: 120%;    
     text-transform: capitalize;
     margin: 0;
     padding: 0;
     border: none;
-    color: black;
+    color: green;
     
 }
+/* potter links */
+#menu {
+    font-weight: 400;
+    font-size: 1.7rem;
+    font-family: nunito-sans, sans-serif;
+    margin-right: 25px;
+  }
+  
+  #menu ul {
+    text-align: center;
+    width: auto;
+  }
+  
+  #menu li {
+    text-align: center;
+    display: inline;
+    margin-left: 3px;
+    width: 25px;
+    list-style: none;
+  }
+  
+  /*Code below from an answer given to a question on the following site
+  https://stackoverflow.com/questions/31140935/how-do-i-add-vertical-line-on-my-menu-item-in-html-css */
+  
+  #menu li:not(:first-child):before {
+    content: "|      ";
+  }
+  
+  #menu a.active {
+    background-color: black;
+    color: white;
+  }
+  
+  /* Dropdown menu */
+  
+  /*Dropdown from W3 school tutorial for dropdown menu - adjusted for this site
+                  https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->*/
+  
+  li a,
+  .dropbtn {
+    display: inline-block;
+    text-align: center;
+    padding: 0px;
+    text-decoration: none;
+  }
+  
+  li a:hover,
+  .dropdown:hover .dropbtn {
+    background-color: black;
+  }
+  
+  li.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: grey;
+    min-width: 210px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    top: 26px;
+    left: 50%;
+    margin-left: -100px;
+  }
+  
+  .dropdown-content a {
+    color: #333333;
+    padding: 10px 15px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: black;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: inline-block;
+  }
+
+
+/* ************************************************************************************** */
+
 nav > ul > li{
     display: inline;   
     
@@ -45,7 +131,7 @@ nav a:hover{
     color: #fafafa;
 }
 .active{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #cfe602;
 }
 header h1{
     width: 100%;
@@ -71,8 +157,11 @@ header h1{
     height: 100px; 
     position: absolute;
 }
+/* ***************************************************************************************** */
+
 
 /* hero image and surrounding images and covers*/
+
 #hero{
     background-repeat:  no-repeat;
     width: 100%;
