--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ p{
 
 /* header and links */
 header{
-    background-color: #cfe602;
+    background-color: black;
     width: 100%;
     height: 7rem;
     text-align: center;
@@ -25,10 +25,19 @@ header{
     margin: 0;
     padding: 0;
     border: none;
-    color: green;
+    color: white;
     
 }
-/* potter links */
+header p{
+    text-align: left;
+    position: absolute;
+    left: 0%;
+    top: 6.5rem;
+    padding: 0;
+    margin: 0;
+    border-bottom: 1px solid white;
+}
+/* ****************************navigation links start**************************** */
 #menu {
     font-weight: 400;
     font-size: 1.7rem;
@@ -47,6 +56,7 @@ header{
     margin-left: 3px;
     width: 25px;
     list-style: none;
+    z-index: 2;
   }
   
   /*Code below from an answer given to a question on the following site
@@ -73,8 +83,11 @@ header{
     padding: 0px;
     text-decoration: none;
   }
+  a.dropbtn{
+      color: white;
+  }
   
-  li a:hover,
+  nav li a:hover,
   .dropdown:hover .dropbtn {
     background-color: black;
   }
@@ -87,16 +100,17 @@ header{
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: grey;
+    background-color: black;
     min-width: 210px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     top: 26px;
     left: 50%;
     margin-left: -100px;
+    
   }
   
   .dropdown-content a {
-    color: #333333;
+    color:#fafafa;
     padding: 10px 15px;
     text-decoration: none;
     display: block;
@@ -104,7 +118,8 @@ header{
   }
   
   .dropdown-content a:hover {
-    background-color: black;
+    background-color: white;
+    color: black;
   }
   
   .dropdown:hover .dropdown-content {
@@ -112,100 +127,58 @@ header{
   }
 
 
-/* ************************************************************************************** */
+/* ************************************* navigation links end ************************************************* */
 
-nav > ul > li{
-    display: inline;   
-    
-}
-nav{
-    width: 100%;
-}
-nav a{
-    list-style-type: none;
-    color: inherit;
-    text-decoration: none;
-}
-nav a:hover{
-    background-color: black;
-    color: #fafafa;
-}
-.active{
-    border-bottom: 2px solid #cfe602;
-}
-header h1{
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    border: none;
-    letter-spacing: 2px;
-}
-
-#craft-1{
-    float: right;
-    right: 0px;  
-}
-#craft-2{
-    float: left;
-    left: 0px;  
-}
-#craft-1, #craft-2{
-    margin: 0;
-    padding: 0 ;
-    border: none;
-    width: 20%;
-    height: 100px; 
-    position: absolute;
-}
-/* ***************************************************************************************** */
 
 
 /* hero image and surrounding images and covers*/
 
-#hero{
-    background-repeat:  no-repeat;
-    width: 100%;
-    height: 37rem;
+.hero-section{
     
+    width: 100%;
+    height: 31rem;    
     border: none;
     padding: 0;
-    margin: 0;
-    
-    
+    margin: 0;    
     background-color: pink;
     
+    
 }
-#hero img{
+.hero-section img{
     position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 20%;
+    width: 70%;
+    height: 78%;
+    left: 15%;
+    background-repeat:  no-repeat;
+    z-index: 0;
+    
+    
 }
 /* cover text and images*/
 
 /* cover text heading */
-#cover-text-heading{
+.cover-text-heading{
     width: auto;
     height: auto;
     border-radius: 25px 0;
-    top: 15%;
+    top: 80%;
     left: 15%; 
     position: absolute; 
     border: 2px solid black;
-    text-align: center;
-    
+    text-align: center;    
     background-color: rgba(65, 64, 64, 0.8);
     color: #fafafa;
     z-index: 3; 
 }
                                         /*lamb*/
-#lamb-section{
+.lamb-section{
     width: 100%;
-    height: 51%;
-    background-color: yellow;
+    height: 18.5rem;
+    background-color: yellow; 
     position: absolute;
+    
 }
-#lamb-image{
+.lamb-image{
     border-radius: 25px 0;       
     top: 16%;
     right: 1%;  
@@ -213,17 +186,17 @@ header h1{
     overflow: hidden;
     
 }
-#lamb-image img{
+.lamb-image img{
     width: 100%;
     height: 100%;
 }
-#lamb-cuts{
+.lamb-cuts{
     border-radius: 25px 0;    
     background-repeat: no-repeat;  
     top: 750px;
     left: 50px;    
 }
-#lamb-description{
+.lamb-description{
     width: 42%;
     height: auto;
     border-radius: 25px 0;
@@ -247,10 +220,11 @@ header h1{
                                         /* poultry */
 #poultry-section{
     width: 100%;
-    height: 51%;
+    height: 18.5rem;
     background-color: lime;
     position: absolute;
-    top: 146%;
+    top: 58rem;
+    
 }
 #poultry-image{
     border-radius: 0 25px;
@@ -293,10 +267,10 @@ header h1{
                                         /*beef*/
 #beef-section{
     width: 100%;
-    height: 51%;
+    height: 18.5rem;
     background-color: rgb(0, 225, 255);
     position: absolute;
-    top: 197%;
+    top: 76.5rem;
 }
 #beef-image{
     border-radius: 0 25px;   
@@ -340,10 +314,10 @@ header h1{
                                         /* pork */
 #pork-section{
     width: 100%;
-    height: 51%;
+    height: 18.5rem;
     background-color: rgb(255, 153, 0);
     position: absolute;
-    top: 248%;
+    top: 95rem;
 }
 #pork-image{
     border-radius: 0 25px;
@@ -386,7 +360,7 @@ header h1{
     top: 7.5%;
 }
 /* communal styles */
-#poultry-description, #pork-description,#beef-description, #lamb-description{
+#poultry-description, #pork-description,#beef-description, .lamb-description{
     border: 2px solid black;
     text-align: center;
     position: absolute;
@@ -394,7 +368,7 @@ header h1{
     color: #fafafa;
     z-index: 3;  
 }
-#poultry-image, #pork-image, #lamb-image, #beef-image{
+#poultry-image, #pork-image, .lamb-image, #beef-image{
     width: 36%;
     height:67%;
     border: 5px solid black;
@@ -409,4 +383,61 @@ hr{
     height: 2px;
     color: black;
     background-color: black;
+}
+
+#rewards{
+    background-color: #127500;
+    height: auto;
+    width: 100%;
+}
+#rewards h2{
+    text-align: center;
+    color: #fafafa;
+    font-size: 30px;
+}
+#rewards p{
+    padding: 0 20px;
+    text-align: left;
+}
+#rewards-link{
+    text-align: center;
+    color: #fafafa;    
+}
+/*footer and social media links */
+footer{
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 113.5rem;
+    height: 2rem;
+}
+footer p{
+    padding: 0 20px 0 0;
+    text-align: right;
+}
+.social-media-links li{
+    display: inline;
+}
+.social-media-links{
+    font-size: 250%;
+    margin: 1%;
+    padding: 0 0 5px 0;
+    color: #fafafa;
+    letter-spacing: 100px;
+    text-align: center;    
+}
+/* rewards form */
+
+#rewards{
+    width: 42rem;
+    height: 28rem;
+    border: 2px solid black;
+    background-color: rgba(65, 64, 64, 0.8);
+    position: absolute;
+    top: 13rem;
+    left: 26rem;
+    border-radius: 5px 5px;
+}
+#rewards h1{
+    text-align: center;
 }
