--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -428,16 +428,85 @@ footer p{
 }
 /* rewards form */
 
-#rewards{
-    width: 42rem;
-    height: 28rem;
-    border: 2px solid black;
+#rewards-form-outer{
+    width: 50rem;
+    height: auto;
+    border: 2px double black;
     background-color: rgba(65, 64, 64, 0.8);
     position: absolute;
-    top: 13rem;
+    top: 10rem;
     left: 26rem;
     border-radius: 5px 5px;
 }
-#rewards h1{
+#rewards-form-outer h1{
     text-align: center;
 }
+.user-data{
+    margin-bottom: 1rem;
+    
+}
+fieldset{
+    border:2px solid yellow;
+}
+
+/*form styles */
+input[type=submit] {
+	margin-left: 0.75rem;
+	padding: 0.75rem;
+	background-color: #5e361b;
+	color: white;
+	border: none;
+	border-radius: 5px;
+}
+
+form {
+	width: 50rem;
+}
+
+legend {
+	font-size: large;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+.personal-details, .address{
+    width: 300px;
+    height: 152px;
+    
+}
+.personal-details div input {
+    float:right;
+}
+
+.address div input {
+    float:right;
+}
+fieldset span{
+    display: inline-block;
+    padding: 0 1.5rem;
+}
+input{
+    padding: 0 0.5rem;
+    margin: 0;
+}
+label{
+    padding: 0 0.5rem 0 0;
+}
+form div{
+    display: table-row;
+    
+}
+.fav-meat{
+    padding: 0 2.9rem 0 0;
+}
+.least-fav-meat{
+    padding: 0 0.5rem 0 0;
+}
+#special-delivery{
+    width: 26.8rem;
+    height: auto;
+    
+}
+.delivery-note{
+    padding: 0 1.55rem 0 0;
+}
+
