--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Nunito+Sans:wght@300&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Nunito+Sans:wght@300&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto&display=swap');
 
 body{
-    font-family: nunito-sans, sans-serif;
+    font-family: roboto, sans-serif;
     font-weight: 300;
     color: black;
     background-color: #fafafa;
@@ -11,12 +12,12 @@ body{
 }
 
 p{
-    font-family:montserrat, sans-serif ;
+    font-family:roboto, sans-serif ;
 }
 
 /* header and links */
 header{
-    background-color: black;
+    background-color: blue;
     width: 100%;
     height: 7rem;
     text-align: center;
@@ -25,24 +26,42 @@ header{
     margin: 0;
     padding: 0;
     border: none;
-    color: white;
-    
+    color: white;    
 }
 header p{
     text-align: left;
     position: absolute;
-    left: 0%;
-    top: 6.5rem;
+    left: 2%;
+    top: 4rem;
     padding: 0;
     margin: 0;
     border-bottom: 1px solid white;
+    font-family: Architects Daughter, sans-serif;
+}
+header h1{
+    font-size: 2.8rem;
+    position: absolute;
+    left: 1rem;
+    top: -1.5rem;
+}
+.foley-name{
+    float: left;
+}
+.nav-div{
+    float: right;
+}
+h1,h2,h3,h4,h5,h6{
+    font-family: Architects Daughter, sans-serif;
 }
 /* ****************************navigation links start**************************** */
 #menu {
     font-weight: 400;
-    font-size: 1.7rem;
+    font-size: 0.9rem;
     font-family: nunito-sans, sans-serif;
     margin-right: 25px;
+    position: absolute;
+    top: 1.5rem;
+    right: 1rem;
   }
   
   #menu ul {
@@ -67,8 +86,8 @@ header p{
   }
   
   #menu a.active {
-    background-color: black;
-    color: white;
+    background-color: rgb(250, 249, 249);
+    color: blue;
   }
   
   /* Dropdown menu */
@@ -89,7 +108,8 @@ header p{
   
   nav li a:hover,
   .dropdown:hover .dropbtn {
-    background-color: black;
+    background-color: white;
+    color: blue;
   }
   
   li.dropdown {
@@ -100,26 +120,27 @@ header p{
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: black;
+    background-color: white;
     min-width: 210px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    top: 26px;
+    top: 17px;
     left: 50%;
     margin-left: -100px;
     
   }
   
   .dropdown-content a {
-    color:#fafafa;
+    color:blue;
     padding: 10px 15px;
     text-decoration: none;
     display: block;
     text-align: left;
+    
   }
   
   .dropdown-content a:hover {
-    background-color: white;
-    color: black;
+    background-color: blue;
+    color: white;
   }
   
   .dropdown:hover .dropdown-content {
@@ -134,15 +155,11 @@ header p{
 /* hero image and surrounding images and covers*/
 
 .hero-section{
-    
     width: 100%;
     height: 31rem;    
     border: none;
     padding: 0;
-    margin: 0;    
-    background-color: pink;
-    
-    
+    margin: 0; 
 }
 .hero-section img{
     position: absolute;
@@ -173,8 +190,7 @@ header p{
                                         /*lamb*/
 .lamb-section{
     width: 100%;
-    height: 18.5rem;
-    background-color: yellow; 
+    height: 18.5rem;     
     position: absolute;
     
 }
@@ -220,8 +236,7 @@ header p{
                                         /* poultry */
 #poultry-section{
     width: 100%;
-    height: 18.5rem;
-    background-color: lime;
+    height: 18.5rem;    
     position: absolute;
     top: 58rem;
     
@@ -267,8 +282,7 @@ header p{
                                         /*beef*/
 #beef-section{
     width: 100%;
-    height: 18.5rem;
-    background-color: rgb(0, 225, 255);
+    height: 18.5rem;    
     position: absolute;
     top: 76.5rem;
 }
@@ -314,8 +328,7 @@ header p{
                                         /* pork */
 #pork-section{
     width: 100%;
-    height: 18.5rem;
-    background-color: rgb(255, 153, 0);
+    height: 18.5rem;    
     position: absolute;
     top: 95rem;
 }
@@ -384,7 +397,7 @@ hr{
     color: black;
     background-color: black;
 }
-
+/*
 #rewards{
     background-color: #127500;
     height: auto;
@@ -402,7 +415,8 @@ hr{
 #rewards-link{
     text-align: center;
     color: #fafafa;    
-}
+}*/
+
 /*footer and social media links */
 footer{
     width: 100%;
@@ -410,6 +424,7 @@ footer{
     position: absolute;
     top: 113.5rem;
     height: 2rem;
+    
 }
 footer p{
     padding: 0 20px 0 0;
@@ -432,7 +447,7 @@ footer p{
     width: 50rem;
     height: auto;
     border: 2px double black;
-    background-color: rgba(65, 64, 64, 0.8);
+    background-color: rgb(250, 250, 250);
     position: absolute;
     top: 10rem;
     left: 26rem;
@@ -446,14 +461,18 @@ footer p{
     
 }
 fieldset{
-    border:2px solid yellow;
+    border:2px solid blue;
+}
+#rewards-page{
+    background-color: white;
+    
 }
 
 /*form styles */
 input[type=submit] {
 	margin-left: 0.75rem;
 	padding: 0.75rem;
-	background-color: #5e361b;
+	background-color: blue;
 	color: white;
 	border: none;
 	border-radius: 5px;
@@ -467,6 +486,7 @@ legend {
 	font-size: large;
 	font-weight: 600;
 	text-transform: uppercase;
+    font-family: Architects Daughter, sans-serif;
 }
 .personal-details, .address{
     width: 300px;
