--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body{
 p{
     font-family:roboto, sans-serif ;
 }
-
+/* ********************************************** HEADER ***********************************/
 /* header and links */
 header{
     background-color: blue;
@@ -53,6 +53,22 @@ header h1{
 h1,h2,h3,h4,h5,h6{
     font-family: Architects Daughter, sans-serif;
 }
+/* *************************** members area login *********************************/
+#members form{
+    position: absolute;
+    right: -5rem;
+    top: 0.1rem;
+    font-family: Architects Daughter, sans-serif;
+}
+#members input[type=submit] {
+	margin-left: 0.75rem;
+	padding: 0.2rem;
+	background-color: white;
+	color: blue;
+	border: none;
+	border-radius: 5px;    
+}
+
 /* ****************************navigation links start**************************** */
 #menu {
     font-weight: 400;
@@ -60,7 +76,7 @@ h1,h2,h3,h4,h5,h6{
     font-family: nunito-sans, sans-serif;
     margin-right: 25px;
     position: absolute;
-    top: 1.5rem;
+    top: 3.5rem;
     right: 1rem;
   }
   
@@ -168,10 +184,10 @@ h1,h2,h3,h4,h5,h6{
     left: 15%;
     background-repeat:  no-repeat;
     z-index: 0;
-    
-    
 }
-/* cover text and images*/
+
+
+/******************************** Products text and images ********************************/
 
 /* cover text heading */
 .cover-text-heading{
@@ -188,12 +204,13 @@ h1,h2,h3,h4,h5,h6{
     z-index: 3; 
 }
                                         /*lamb*/
-.lamb-section{
+#lamb-section{
     width: 100%;
     height: 18.5rem;     
     position: absolute;
     
 }
+
 .lamb-image{
     border-radius: 25px 0;       
     top: 16%;
@@ -212,7 +229,7 @@ h1,h2,h3,h4,h5,h6{
     top: 750px;
     left: 50px;    
 }
-.lamb-description{
+#lamb-description{
     width: 42%;
     height: auto;
     border-radius: 25px 0;
@@ -372,8 +389,8 @@ h1,h2,h3,h4,h5,h6{
     right: 3%;
     top: 7.5%;
 }
-/* communal styles */
-#poultry-description, #pork-description,#beef-description, .lamb-description{
+/* ************************ PRODUCTS communal styles *************************/
+#poultry-description, #pork-description,#beef-description, #lamb-description{
     border: 2px solid black;
     text-align: center;
     position: absolute;
@@ -392,30 +409,13 @@ h1,h2,h3,h4,h5,h6{
 
 }
 hr{
-    width: 35%;
+    width: 100%;
     height: 2px;
     color: black;
     background-color: black;
+    margin: auto 10%;
 }
-/*
-#rewards{
-    background-color: #127500;
-    height: auto;
-    width: 100%;
-}
-#rewards h2{
-    text-align: center;
-    color: #fafafa;
-    font-size: 30px;
-}
-#rewards p{
-    padding: 0 20px;
-    text-align: left;
-}
-#rewards-link{
-    text-align: center;
-    color: #fafafa;    
-}*/
+
 
 /*footer and social media links */
 footer{
@@ -489,7 +489,7 @@ legend {
     font-family: Architects Daughter, sans-serif;
 }
 .personal-details, .address{
-    width: 300px;
+    width: 302px;
     height: 152px;
     
 }
@@ -529,4 +529,189 @@ form div{
 .delivery-note{
     padding: 0 1.55rem 0 0;
 }
+.underline{
+    text-decoration:underline;
+}
 
+
+
+
+
+
+
+/* [[[[[[[[[[[[[[[[[[[[[[[[[[[[[index testing page [[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[*/
+
+#hero-section-1{
+    width: 100%;
+    height: 26rem;
+    
+}
+#hero-section-1 div{
+    width: 55rem;
+    height: 25rem;
+    border: 5px groove blue;
+    border-radius: 13px;
+    overflow: hidden;
+    margin: 2% 20%;
+
+}
+#shop-front img{
+    width: 100%;
+    height: 100%;
+}
+
+#hero-section-2{
+    width: 100%;
+    height: 24rem;    
+    border: none;
+    padding: 0;
+    margin: 0; 
+    justify-content: space-evenly;
+}
+
+#hero-span-1, #hero-span-2, #hero-span-3{
+    width: 20%;
+    height: 17rem;
+    display: inline;
+    background-color: white;
+    border: 5px solid blue;
+    border-radius: 10%;
+    overflow: hidden;
+    box-sizing: border-box;
+    
+    
+}
+#hero-span-1{
+    float: left;
+    margin:5% 5% 5% 10%;
+
+}
+#hero-span-1 img{
+    width: 100%;
+    height: 100%;
+}
+#hero-span-2{
+    float: left;
+    margin: 5% 5%;
+    padding: 1% 2%;
+}
+#hero-span-3{
+    float: left;
+    margin: 5% 10% 5% 5% ;
+    padding: 0;
+}
+#hero-span-3 img{
+    width: 100%;
+    height: 100%;
+}
+
+#lamb-section-2{
+    width: 100%;
+    height: 18.5rem; 
+    clear: both;  
+    background-color: red;  
+    /* position: absolute; */
+    
+}
+.lamb-image-2{
+    border-radius: 25px 0;       
+    top: 16%;
+    right: 1%;  
+    background-repeat:no-repeat; 
+    overflow: hidden;
+    clear: both;
+    
+    
+}
+.lamb-image-2 img{
+    width: 30%;
+    height: 30%;
+}
+.lamb-cuts-2{
+    border-radius: 25px 0;    
+    background-repeat: no-repeat;  
+    top: 750px;
+    left: 50px;    
+}
+#lamb-description-2{
+    width: 42%;
+    height: auto;
+    border-radius: 25px 0;
+    top: 32%;
+    left: 22%;      
+}
+#lamb-2{
+    text-align: center;
+    display: -webkit-inline-box;
+    margin: 2% 0 0 20%;
+    
+}
+.lamb-hr-left-2{
+    /* position: absolute; */
+    left: 3%;
+    top: 7.5%;
+}
+.lamb-hr-right-2{
+    /* position: absolute; */
+    right: 3%;
+    top: 7.5%;
+}
+#lamb-description-2{
+    border: 2px solid black;
+    text-align: center;
+    /* position: absolute; */
+    background-color: rgba(65, 64, 64, 0.8);
+    color: #fafafa;
+    z-index: 3;  
+}
+.lamb-image-2 {
+    width: 36%;
+    height:67%;
+    border: 5px solid black;
+    /* position: absolute; */
+    margin: 0;
+    padding: 0;
+    z-index: 2;
+    margin: 2% 0 0 63%;
+
+}
+
+
+
+
+
+
+
+
+
+/* for larger to medium screens from 1200px wide and down 
+@media screen and (max-width: 1200px){
+    #club-ethos{
+        width: 65%;
+        height:1200px;
+        margin: 0 auto;
+    }
+
+    #welcome{
+        padding: 30px 0;
+        margin: 0;
+    }
+
+    #left-about , #right-about{
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    #center-about{
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    hr {
+        display: none;
+    }
+}
+*/
