--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,6 +426,9 @@ footer{
     height: 2rem;
     
 }
+footer h3{
+    text-align: center;
+}
 footer p{
     padding: 0 20px 0 0;
     text-align: right;
