--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,8 @@ header{
     margin: 0;
     padding: 0;
     border: none;
-    color: white;    
+    color: white; 
+    min-width: 793px;   
 }
 header p{
     text-align: left;
@@ -547,15 +548,17 @@ form div{
 #hero-section-1{
     width: 100%;
     height: 26rem;
+    vertical-align: middle;
     
 }
 #hero-section-1 div{
-    width: 55rem;
-    height: 25rem;
+    width: 60%;
+    height: 100%;
     border: 5px groove blue;
     border-radius: 13px;
     overflow: hidden;
     margin: 2% 20%;
+    min-width: 640px;
 
 }
 #shop-front img{
@@ -606,6 +609,7 @@ form div{
 #hero-span-3 img{
     width: 100%;
     height: 100%;
+    min-width: 203px;
 }
 
 #lamb-section-2{
