--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,7 +414,7 @@ hr{
     height: 2px;
     color: black;
     background-color: black;
-    margin: auto 10%;
+    margin: 5% 5% 5% 14%;
 }
 
 
@@ -612,76 +612,142 @@ form div{
     min-width: 203px;
 }
 
-#lamb-section-2{
+/* all good tests above */
+
+.new-section{
     width: 100%;
-    height: 18.5rem; 
+    height: 19.5rem;
+    background-color: green;
+    position: relative;
+}
+.new-section-div{
+    width: 29%;
+    height: 14.5rem;
+    background-color:orange;
+    border: 5px solid black;
+    float: left;
+    margin: 2% 1.8% 2% 1.8%
+        
+    
+}
+#meat-cuts-image img{
+    width: 26%;
+    height: 60%;
+    margin: 8% 0 0 5%;
+    border: 5px solid black;
+    border-radius: 0 40px;
+    overflow: hidden;
+     position: absolute;
+    top: -20%;
+    left: -4%; 
+    z-index: 0;
+}
+#animal-pic img{
+    width: 30%;
+    height: 78%;
+    margin: 8% 0 0 5%;
+    border: 5px solid black;
+    border-radius: 0 40px;
+    overflow: hidden;
+     position: absolute;
+    top: -30%;
+    right: 1%;
+    z-index: 0; 
+}
+new-section div img{
+    width: 80%;
+    height: 80%;
+    margin: 8% 0 0 5%;
+    border: 5px solid black;
+    border-radius: 0 40px;
+    overflow: hidden;
+    /* position: absolute;
+    top: 0;
+    left: 0; */
+    
+}
+.new-section div p{
+    width: 43%;
+    height: 23%;
+    margin: 8% 0 0 5%;
+    border: 5px solid black;
+    border-radius: 1rem;
+    overflow: hidden;
+    background-color: rgba(65, 64, 64, 0.8);
+    color: #fafafa;
+    position: absolute;
+    top: -1%;
+    left: 21%;
+    padding: 1%;
+    z-index: 2;
+}
+
+
+.meat-type-heading{
+    width: 100%;
+    height: 3.5rem; 
     clear: both;  
-    background-color: red;  
+    background-color: red;
+    z-index: 1;  
     /* position: absolute; */
     
 }
-.lamb-image-2{
+lamb-image-2 {
+    width: 20%;
+    height:67%;
+    border: 5px solid black;
+    margin: 0;
+    padding: 0;
+    z-index: 2;
+    margin: 2% 0 0 1%;
+    float: right;
+
+}
+lamb-image-2{
     border-radius: 25px 0;       
     top: 16%;
     right: 1%;  
     background-repeat:no-repeat; 
     overflow: hidden;
     clear: both;
-    
-    
+    position:absolute;
+    top: 1%;
+    right: 1%;    
 }
-.lamb-image-2 img{
+.animal-pic img{
     width: 30%;
     height: 30%;
 }
-.lamb-cuts-2{
+.new-section .new-div-1 #new-span-1{
+    width: 70%;
+    height: auto;
     border-radius: 25px 0;    
     background-repeat: no-repeat;  
-    top: 750px;
-    left: 50px;    
+    
+    border: 0; 
+    margin: 20% 0 0 2%;   
 }
-#lamb-description-2{
-    width: 42%;
-    height: auto;
-    border-radius: 25px 0;
-    top: 32%;
-    left: 22%;      
+
+#lamb-heading span{
+    width: 30%;
+    height: 2rem;
+    float: left;
 }
-#lamb-2{
+.lamb-2{
     text-align: center;
-    display: -webkit-inline-box;
-    margin: 2% 0 0 20%;
+    display:-webkit-inline-box;
+    margin: 2% 0 0 33%;
     
 }
-.lamb-hr-left-2{
-    /* position: absolute; */
-    left: 3%;
-    top: 7.5%;
-}
-.lamb-hr-right-2{
-    /* position: absolute; */
-    right: 3%;
-    top: 7.5%;
-}
-#lamb-description-2{
-    border: 2px solid black;
-    text-align: center;
-    /* position: absolute; */
-    background-color: rgba(65, 64, 64, 0.8);
-    color: #fafafa;
-    z-index: 3;  
-}
-.lamb-image-2 {
-    width: 36%;
-    height:67%;
-    border: 5px solid black;
-    /* position: absolute; */
-    margin: 0;
-    padding: 0;
-    z-index: 2;
-    margin: 2% 0 0 63%;
 
+.lamb-description-2{
+    width: 2rem;
+    height: 2rem;
+    background-color: yellow;
+    z-index: 2;
 }
+
+
 
 
 
