create alternative pages and copy css to minimise and clean code

--- a/secondcss.css
+++ b/secondcss.css
@@ -1,171 +1,5 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Nunito+Sans:wght@300&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto&display=swap');
-
-body{
-    font-family: roboto, sans-serif;
-    font-weight: 300;
-    color: black;
-    background-color: #fafafa;
-    margin: 0;
-    padding: 0;
-    border: none;
-}
-
-p{
-    font-family:roboto, sans-serif ;
-}
-/* ********************************************** HEADER ***********************************/
-/* header and links */
-header{
-    background-color: blue;
-    width: 100%;
-    height: 7rem;
-    text-align: center;
-    font-size: 120%;    
-    text-transform: capitalize;
-    margin: 0;
-    padding: 0;
-    border: none;
-    color: white; 
-    min-width: 793px;   
-}
-header p{
-    text-align: left;
-    position: absolute;
-    left: 2%;
-    top: 4rem;
-    padding: 0;
-    margin: 0;
-    border-bottom: 1px solid white;
-    font-family: Architects Daughter, sans-serif;
-}
-header h1{
-    font-size: 2.8rem;
-    position: absolute;
-    left: 1rem;
-    top: -1.5rem;
-}
-.foley-name{
-    float: left;
-}
-.nav-div{
-    float: right;
-}
-h1,h2,h3,h4,h5,h6{
-    font-family: Architects Daughter, sans-serif;
-}
-/* *************************** members area login *********************************/
-#members form{
-    position: absolute;
-    right: -5rem;
-    top: 0.1rem;
-    font-family: Architects Daughter, sans-serif;
-}
-#members input[type=submit] {
-	margin-left: 0.75rem;
-	padding: 0.2rem;
-	background-color: white;
-	color: blue;
-	border: none;
-	border-radius: 5px;    
-}
-
-/* ****************************navigation links start**************************** */
-#menu {
-    font-weight: 400;
-    font-size: 0.9rem;
-    font-family: nunito-sans, sans-serif;
-    margin-right: 25px;
-    position: absolute;
-    top: 3.5rem;
-    right: 1rem;
-  }
-  
-  #menu ul {
-    text-align: center;
-    width: auto;
-  }
-  
-  #menu li {
-    text-align: center;
-    display: inline;
-    margin-left: 3px;
-    width: 25px;
-    list-style: none;
-    z-index: 2;
-  }
-  
-  /*Code below from an answer given to a question on the following site
-  https://stackoverflow.com/questions/31140935/how-do-i-add-vertical-line-on-my-menu-item-in-html-css */
-  
-  #menu li:not(:first-child):before {
-    content: "|      ";
-  }
-  
-  #menu a.active {
-    background-color: rgb(250, 249, 249);
-    color: blue;
-  }
-  
-  /* Dropdown menu */
-  
-  /*Dropdown from W3 school tutorial for dropdown menu - adjusted for this site
-                  https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->*/
-  
-  li a,
-  .dropbtn {
-    display: inline-block;
-    text-align: center;
-    padding: 0px;
-    text-decoration: none;
-  }
-  a.dropbtn{
-      color: white;
-  }
-  
-  nav li a:hover,
-  .dropdown:hover .dropbtn {
-    background-color: white;
-    color: blue;
-  }
-  
-  li.dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 210px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    top: 17px;
-    left: 50%;
-    margin-left: -100px;
-    
-  }
-  
-  .dropdown-content a {
-    color:blue;
-    padding: 10px 15px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    
-  }
-  
-  .dropdown-content a:hover {
-    background-color: blue;
-    color: white;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: inline-block;
-  }
 
 
-/* ************************************* navigation links end ************************************************* */
 
 
 
@@ -418,199 +252,10 @@ hr{
 }
 
 
-/*footer and social media links */
-footer{
-    width: 100%;
-    height: auto;
-    position: absolute;
-    top: 113.5rem;
-    height: 2rem;
-    
-}
-footer h3{
-    text-align: center;
-}
-footer p{
-    padding: 0 20px 0 0;
-    text-align: right;
-}
-.social-media-links li{
-    display: inline;
-}
-.social-media-links{
-    font-size: 250%;
-    margin: 1%;
-    padding: 0 0 5px 0;
-    color: #fafafa;
-    letter-spacing: 100px;
-    text-align: center;    
-}
-/* rewards form */
-
-#rewards-form-outer{
-    width: 50rem;
-    height: auto;
-    border: 2px double black;
-    background-color: rgb(250, 250, 250);
-    position: absolute;
-    top: 10rem;
-    left: 26rem;
-    border-radius: 5px 5px;
-}
-#rewards-form-outer h1{
-    text-align: center;
-}
-.user-data{
-    margin-bottom: 1rem;
-    
-}
-fieldset{
-    border:2px solid blue;
-}
-#rewards-page{
-    background-color: white;
-    
-}
-
-/*form styles */
-input[type=submit] {
-	margin-left: 0.75rem;
-	padding: 0.75rem;
-	background-color: blue;
-	color: white;
-	border: none;
-	border-radius: 5px;
-}
-
-form {
-	width: 50rem;
-}
-
-legend {
-	font-size: large;
-	font-weight: 600;
-	text-transform: uppercase;
-    font-family: Architects Daughter, sans-serif;
-}
-.personal-details, .address{
-    width: 302px;
-    height: 152px;
-    
-}
-.personal-details div input {
-    float:right;
-}
-
-.address div input {
-    float:right;
-}
-fieldset span{
-    display: inline-block;
-    padding: 0 1.5rem;
-}
-input{
-    padding: 0 0.5rem;
-    margin: 0;
-}
-label{
-    padding: 0 0.5rem 0 0;
-}
-form div{
-    display: table-row;
-    
-}
-.fav-meat{
-    padding: 0 2.9rem 0 0;
-}
-.least-fav-meat{
-    padding: 0 0.5rem 0 0;
-}
-#special-delivery{
-    width: 26.8rem;
-    height: auto;
-    
-}
-.delivery-note{
-    padding: 0 1.55rem 0 0;
-}
-.underline{
-    text-decoration:underline;
-}
-
-
-
-
-
 
 
 /* [[[[[[[[[[[[[[[[[[[[[[[[[[[[[index testing page [[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[*/
-
-#hero-section-1{
-    width: 100%;
-    height: 26rem;
-    vertical-align: middle;
-    
-}
-#hero-section-1 div{
-    width: 60%;
-    height: 100%;
-    border: 5px groove blue;
-    border-radius: 13px;
-    overflow: hidden;
-    margin: 2% 20%;
-    min-width: 640px;
-
-}
-#shop-front img{
-    width: 100%;
-    height: 100%;
-}
-
-#hero-section-2{
-    width: 100%;
-    height: 24rem;    
-    border: none;
-    padding: 0;
-    margin: 0; 
-    justify-content: space-evenly;
-}
-
-#hero-span-1, #hero-span-2, #hero-span-3{
-    width: 20%;
-    height: 17rem;
-    display: inline;
-    background-color: white;
-    border: 5px solid blue;
-    border-radius: 10%;
-    overflow: hidden;
-    box-sizing: border-box;
-    
-    
-}
-#hero-span-1{
-    float: left;
-    margin:5% 5% 5% 10%;
-
-}
-#hero-span-1 img{
-    width: 100%;
-    height: 100%;
-}
-#hero-span-2{
-    float: left;
-    margin: 5% 5%;
-    padding: 1% 2%;
-}
-#hero-span-3{
-    float: left;
-    margin: 5% 10% 5% 5% ;
-    padding: 0;
-}
-#hero-span-3 img{
-    width: 100%;
-    height: 100%;
-    min-width: 203px;
-}
+products styles below
 
 /* all good tests above */
 
@@ -714,7 +359,7 @@ new-section div img{
     border-radius: 1rem;
     overflow: hidden;
     background-color: white;
-    color: black;
+    color: blue;
     position: absolute;
     top: -1%;
     left: 21%;
