--- a/unused/style.css
+++ b/unused/style.css
@@ -443,7 +443,11 @@ footer p{
     padding: 0 0 5px 0;
     color: #fafafa;
     letter-spacing: 100px;
-    text-align: center;    
+    text-align: center;
+      
+}
+.fab {
+    color: blue;  
 }
 /* rewards form */
 
@@ -613,24 +617,15 @@ form div{
 }
 
 /* all good tests above */
-
-.new-section{
+/* ************************ products testing sections ******************************* */
+.product-outer{
     width: 100%;
     height: 19.5rem;
     background-color: beige;
     position: relative;
 }
-.new-section-div{
-    width: 29%;
-    height: 14.5rem;
-    background-color:orange;
-    border: 5px solid black;
-    float: left;
-    margin: 2% 1.8% 2% 1.8%
-        
-    
-}
-#meat-cuts-left img{
+
+.meat-cuts-left img{
     width: 26%;
     height: 60%;
     margin: 8% 0 0 5%;
@@ -642,7 +637,7 @@ form div{
     left: -4%; 
     z-index: 0;
 }
-#meat-cuts-right img{
+.meat-cuts-right img{
     width: 26%;
     height: 60%;
     margin: 8% 0 0 5%;
@@ -654,7 +649,7 @@ form div{
     right: 1%; 
     z-index: 0;
 }
-#animal-pic-right img{
+.animal-pic-right img{
     width: 30%;
     height: 78%;
     margin: 8% 0 0 5%;
@@ -666,7 +661,7 @@ form div{
     right: 1%;
     z-index: 0; 
 }
-#animal-pic-left img{
+.animal-pic-left img{
     width: 30%;
     height: 78%;
     margin: 8% 0 0 5%;
@@ -678,35 +673,11 @@ form div{
     left: -4%;
     z-index: 0; 
 }
-.new-section .left{
-    width: 43%;
-    height: auto;
-    margin: 8% 0 0 5%;
-    border: 5px solid blue;
-    border-radius: 1rem;
-    overflow: hidden;
-    background-color: white;
-    color: black;
-    position: absolute;
+.product-outer .left{
     top: -3%;
-    left: 24%;
-    padding: 1%;
-    z-index: 2;
+    left: 24%;    
 }
-
-new-section div img{
-    width: 80%;
-    height: 80%;
-    margin: 8% 0 0 5%;
-    border: 5px solid blue;
-    border-radius: 0 40px;
-    overflow: hidden;
-    /* position: absolute;
-    top: 0;
-    left: 0; */
-    
-}
-.new-section div p{
+.product-outer div p{
     width: 43%;
     height: auto;
     margin: 8% 0 0 5%;
@@ -721,73 +692,26 @@ new-section div img{
     padding: 1%;
     z-index: 2;
 }
-
-
 .meat-type-heading{
     width: 100%;
     height: 3.5rem; 
     clear: both; 
     background-color: blue; 
     color: #fafafa;   
-    z-index: 1;  
-    /* position: absolute; */
-    
+    z-index: 1;      
 }
-lamb-image-2 {
-    width: 20%;
-    height:67%;
-    border: 5px solid black;
-    margin: 0;
-    padding: 0;
-    z-index: 2;
-    margin: 2% 0 0 1%;
-    float: right;
-
-}
-lamb-image-2{
-    border-radius: 25px 0;       
-    top: 16%;
-    right: 1%;  
-    background-repeat:no-repeat; 
-    overflow: hidden;
-    clear: both;
-    position:absolute;
-    top: 1%;
-    right: 1%;    
-}
-.animal-pic img{
-    width: 30%;
-    height: 30%;
-}
-.new-section .new-div-1 #new-span-1{
-    width: 70%;
-    height: auto;
-    border-radius: 25px 0;    
-    background-repeat: no-repeat;  
-    
-    border: 0; 
-    margin: 20% 0 0 2%;   
-}
-
-#lamb-heading span{
+.meat-type-heading span{
     width: 30%;
     height: 2rem;
     float: left;
-}
-.lamb-2{
+} 
+.product-heading{
     text-align: center;
     display:-webkit-inline-box;
-    margin: 2% 0 0 33%;
-    
+    margin: 2% 0 0 33%;    
 }
 
-.lamb-description-2{
-    width: 2rem;
-    height: 2rem;
-    background-color: yellow;
-    z-index: 2;
-}
-section h2{
+.natural {
     margin: 1%;
 }
 
