--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -410,12 +410,15 @@ footer p{
 
 
 
-
-
-
-
-
-
+.meat-type-heading-2{
+    width: 100%;
+    height: 3.5rem; 
+    clear: both; 
+    background-color: blue; 
+    color: #fafafa;   
+    z-index: 1;
+} 
+/* **************find out why this is needed for products page as wont work without it */
 
 
 
@@ -433,19 +436,23 @@ footer p{
     clear: both; 
     background-color: blue; 
     color: #fafafa;   
-    z-index: 1;      
+    z-index: 1;
 }
+
 .meat-type-heading span{
     width: 30%;
     height: 2rem;
     float: left;
+    
 }
+
 hr{
     width: 100%;
     height: 2px;
     color: white;
     background-color:white;
     margin: 5% 5% 5% 14%;
+    
 } 
 .product-heading{
     text-align: center;
