--- a/new.css
+++ b/new.css
@@ -1,458 +1,489 @@
 @import url('https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap');
-@media screen and (min-width: 601px){
-    body{
-    padding: 0;
-    }
-
-    header{
-    width: 100%;
-    height: 100px;
-    background-color: #05274b;
-    position: relative;
-    }
-    .foleys-name{
-    font-family: Hina Mincho, sans-serif;
-    }
-    hr{
-    width: 170px;
-    height: 2px;
-    color: white;
-    padding: 0;
-    margin: 0;
-    }
-    .hero-section-inner hr{
-    width: 100%;
-    height: 5px;
-    background-color: white;
-    }
-    header h1{
-    position: absolute;
-    top: -15%;
-    left: 2.5%;
-    color: white;
-    font-size: 50px;
-    font-family: Hina Mincho, sans-serif;
-    
-    }
-    header h2{
-    position: absolute;
-    top: 13%;
-    right: 2.5%;
-    color: white;
-
-    }
-    .hero-section-inner{
-    width: 100%;
-    height: 693px;
-    background-color: #757575;
-    position: relative;
-    }
-    .hero-section-inner h1{
-    position: absolute;
-    top: 33px;
-    left: 550px;
-    font-size: 60px;
-    color: white;
-    }
-    .hero-section-inner p{
-    position: absolute;
-    top: 127px;
-    left: 521px;
-    font-size: 30px;
-    color: white;
-    }
-    .craft{
-    height: 150px;
-    width: 150px;
-    position: absolute;
-    top: 55px;
-    right: 5px;
-    }
-    .product-selectors{
-    width: 100%;
-    height: 503px;
-    position: relative;
-    background-color: #05274b;
-    display: flex;
-    }
-    .div1{
-    background-color: #05274b;
-    top: -250px;
-    left: 2.5%;
-    }
-    .div2{
-    background-color: #05274b;
-    top: -250px;
-    left: 27.5%;
-    }
-    .div3{
-    
-    background-color: #05274b;
-    top: -250px;
-    right: 27.5%;
-    }
-    .div4{
-    background-color: #05274b;
-    top: -250px;
-    right: 2.5%;
-    }
-    .div1, .div2, .div3, .div4 {
-    width: 20%;
-    height: 500px;
-    position: absolute;
-    z-index: 2;
-    }
-    .div1 h2, .div2 h2{
-    /* position: absolute; */
-    top: 314px;
-    left: 126px;
-    color: white;
-    font-size: 30px;
-    padding: 7% 0 0px 40%;
-    } 
-    .div3 h2, .div4 h2{
-    /* position: absolute; */
-    top: 314px;
-    right: 126px;
-    color: white;
-    font-size: 30px;
-    padding: 7% 0 0px 34%;
-    }
-    .inner-div{
-    width: 100%;
-    height: 50%;
-    background-color: white;
-    position: relative ;
-    }
-    .inner-div img{
-    width: 100%;
-    height: 100%;
-    }
-    .section1-inner {
-    width: 100%;
-    height: 500px;
-    background-color: #251e19;
-    box-sizing: borderbox;
-    position: relative;
-    }
-    .our-products-heading{
-    position: absolute;
-    bottom: 2%;
-    left: 40%;
-    font-size: 55px;
-    color: white;
-    }
-    .section2{
-    width: 100%;
-    height: 800px;
-    position: relative;
-    /* background-color: rgb(2, 48, 2); */
-    display: flex;
-    }
-    .meat-image-outer{
-    width: 50%;
-    height: 800px;
-    }
-    .meat-image{
-    width: 40%;
-    height: 400px;
-    position: absolute;
-    left: 7.5%;
-    top: 12.5%;
-    box-shadow: 15px 15px darkslategray;
-    
-    }
-
-    .meat-text-outer{
-    width: 50%;
-    height: 800px;
-    position: relative;
-
-    }
-    .meat-heading-and-text{
-    position: absolute;
-    left: 250px;
-    top: 140px;
-    width: 50%;
-    height: auto;
-    
-    }
-    .meat-heading-and-text h1{
-    font-size: 40px;
-    color: white;
-    }
-    .meat-heading-and-text p{
-    font-size: 18px;
-    color: white;
-
-    }
-    #beef{
-    background-color: #05274b ;
-    }
-    #pork{
-    background-color: rgb(2, 48, 2);
-    }
-    #chicken{
-    background-color: white;
-    }
-    #chicken .meat-heading-and-text h1{
-    font-size: 40px;
-    color:#05274b ;
-    }
-    #chicken .meat-heading-and-text p{
-    font-size: 18px;
-    color: #05274b;
-
-    }
-    #lamb{
-    background-color: #757575;
-    }
-    .learn-more{
-    position: absolute;
-    bottom: 153px;
-    left: 22.5%;
-    }
-    .learn-more button{
-    font-size: 25px;
-    }
-    #chicken button{
-    background-color:#05274b ;
-    color: white;
-    }
-    #pork button{
-    background-color: #757575;
-  
-    }
-    #lamb button{
-    background-color: white;
-    color: #05274b;
-    }
+body{
+  scroll-behavior: smooth;
 }
+header{	
+    width: 100%;	
+    height: 150px;	
+    background-color: #05274b;	
+    position: relative;	
+    text-align: center;
+    z-index: 8; 
+    }
+/* header h1{
+    font-size: 2.8rem;
+    position: absolute;
+    left: 1rem;
+    top: -1.5rem;
+} */
+
+.welcome-message{
+    text-align: center;
+    
+}
+
+.foley-name{
+    float: left;
+}
+.nav-div{
+    float: right;
+    
+}
+/* ****************************navigation links start**************************** */
+#menu {
+    font-weight: 400;
+    font-size: 18px;
+    font-family: nunito-sans, sans-serif;
+    margin-right: 25px;
+    position: absolute;
+    top: 27px;
+    right: 10px;
+  }
+  
+  #menu ul {
+    text-align: center;
+    width: auto;
+  }
+  
+  #menu li {
+    text-align: center;
+    display: inline;
+    margin-left: 3px;
+    width: 25px;
+    list-style: none;
+    z-index: 2;
+  }
+  
+  /*Code below from an answer given to a question on the following site
+  https://stackoverflow.com/questions/31140935/how-do-i-add-vertical-line-on-my-menu-item-in-html-css */
+  
+  #menu li:not(:first-child):before {
+    content: "|      ";
+    color: white;
+  }
+  
+  #menu a.active {
+    background-color: rgb(250, 249, 249);
+    color: #05274b;
+  }
+  
+  /* Dropdown menu */
+  
+  /*Dropdown from W3 school tutorial for dropdown menu - adjusted for this site
+                  https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->*/
+  
+  li a,
+  .dropbtn {
+    display: inline-block;
+    text-align: center;
+    padding: 0px;
+    text-decoration: none;
+  }
+  a.dropbtn{
+      color: white;
+  }
+  
+  nav li a:hover,
+  .dropdown:hover .dropbtn {
+    background-color: white;
+    color: #05274b;
+  }
+  
+  li.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 210px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    top: 17px;
+    left: 50%;
+    margin-left: -100px;
+    
+  }
+  
+  .dropdown-content a {
+    color:#05274b;
+    padding: 10px 15px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #05274b;
+    color: white;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: inline-block;
+  }
+/* *************** navigation links end ************* */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* @media screen and (min-width: 768px){ */
+  body{
+  padding: 0;
+  }
+
+  header{
+  width: 100%;
+  height: 100px;
+  background-color: #05274b;
+  position: relative;
+  }
+  .foleys-name{
+  font-family: Hina Mincho, sans-serif;
+  }
+  .hero-section{
+    text-align: center;
+  }  
+  .hero-section-inner hr{
+  width: 100%;
+  height: 5px;
+  background-color: white;
+  }
+  header h1{
+  color: white;
+  font-size: 50px;
+  font-family: Hina Mincho, sans-serif;
+  
+  }
+  header h2{  
+  top: 13%;
+  right: 2.5%;
+  color: white;
+
+  }
+  .hero-section-inner{
+  width: 100%;
+  height: 693px;
+  background-color: #757575;
+  position: relative;
+  }
+  .hero-section-inner h1{
+  font-size: 60px;
+  color: white;
+  margin: 0;
+  }
+  .hero-section-inner p{  
+  top: 127px;
+  left: 521px;
+  font-size: 30px;
+  color: white;
+  }
+  .craft{
+  height: 150px;
+  width: 150px;
+  position: absolute;
+  top: 55px;
+  right: 5px;
+  }
+  .product-selectors{
+  width: 100%;
+  height: 503px;
+  position: relative;
+  background-color: #05274b;
+  display: flex;
+  }
+  .div1{
+  background-color: #05274b;
+  top: -280px;
+  left: 2.5%;
+  }
+  .div2{
+  background-color: #05274b;
+  top: -280px;
+  left: 27.5%;
+  }
+  .div3{
+  
+  background-color: #05274b;
+  top: -280px;
+  right: 27.5%;
+  }
+  .div4{
+  background-color: #05274b;
+  top: -280px;
+  right: 2.5%;
+  }
+  .div1, .div2, .div3, .div4 {
+  width: 20%;
+  height: 400px;
+  position: absolute;
+  z-index: 2;
+  }
+  .div1 h2, .div2 h2{
+  
+  top: 314px;
+  left: 126px;
+  color: white;
+  font-size: 30px;
+  padding: 7% 0 0px 40%;
+  } 
+  .div3 h2, .div4 h2{
+  
+  top: 314px;
+  right: 126px;
+  color: white;
+  font-size: 30px;
+  padding: 7% 0 0px 34%;
+  }
+  .inner-div{
+  width: 100%;
+  height: 70%;
+  background-color: white;
+  position: relative ;
+  }
+  .inner-div img{
+  width: 100%;
+  height: 100%;
+  }
+  .section1-inner {
+  width: 100%;
+  height: 500px;
+  background-color: #251e19;
+  box-sizing: borderbox;
+  position: relative;
+  }
+  .our-products-heading{
+  position: absolute;
+  bottom: 2%;
+  left: 40%;
+  font-size: 55px;
+  color: white;
+  }
+  .section2{
+  width: 100%;
+  height: 800px;
+  position: relative;
+  display: flex;
+  }
+  .meat-image-outer{
+  width: 50%;
+  height: 800px;
+  }
+  .meat-image{
+  width: 40%;
+  height: 400px;
+  position: absolute;
+  left: 7.5%;
+  top: 12.5%;
+  box-shadow: 15px 15px darkslategray;
+  
+  }
+
+  .meat-text-outer{
+  width: 50%;
+  height: 800px;
+  position: relative;
+
+  }
+  .meat-heading-and-text{
+  position: absolute;
+  left: 250px;
+  top: 140px;
+  width: 50%;
+  height: auto;
+  
+  }
+  .meat-heading-and-text h1{
+  font-size: 40px;
+  color: white;
+  }
+  .meat-heading-and-text p{
+  font-size: 18px;
+  color: white;
+
+  }
+  #beef{
+  background-color: #05274b ;
+  }
+  #pork{
+  background-color: rgb(2, 48, 2);
+  }
+  #chicken{
+  background-color: white;
+  }
+  #chicken .meat-heading-and-text h1{
+  font-size: 40px;
+  color:#05274b ;
+  }
+  #chicken .meat-heading-and-text p{
+  font-size: 18px;
+  color: #05274b;
+
+  }
+  #lamb{
+  background-color: #757575;
+  }
+  .learn-more{
+  position: absolute;
+  bottom: 153px;
+  left: 22.5%;
+  }
+  .learn-more button{
+  font-size: 25px;
+  }
+  #chicken button{
+  background-color:#05274b ;
+  color: white;
+  }
+  #pork button{
+  background-color: #757575;
+
+  }
+  #lamb button{
+  background-color: white;
+  color: #05274b;
+  }
+
 
 /****************************************************************/
 
-@media screen and (max-width: 600px){	
-    body{	
-    padding: 0;	
-        }	
-    header{	
-    width: 100%;	
-    height: 150px;	
-    background-color: #05274b;	
-    position: relative;	
-    }	
-    .foleys-name{	
-    font-family: Hina Mincho, sans-serif;	
-    }	
-    hr{	
-    width: 170px;	
-    height: 2px;	
-    color: white;	
-    padding: 0;	
-    margin: 0;	
-    display: none;	
-    }	
-    .hero-section-inner hr{	
-    width: 100%;	
-    height: 5px;	
-    background-color: white;	
-    }	
-    header h1{     	
-    color: white;	
-    font-size: 50px;	
-    font-family: Hina Mincho, sans-serif;	
-    text-align: center;	
-    	
-    }	
-    header h2{	
-    right: 2.5%;	
-    color: white;	
-    font-size: 15px;	
-    text-align: center;	
-    }	
-    .hero-section-inner{	
-    width: 100%;	
-    height: 88px;	
-    background-color: #757575;	
-    position: relative;	
-    }	
-    .hero-section-inner h1{    	
-    font-size: 39px;	
-    color: white;	
-    margin: 0;	
-    text-align: center;	
-    }	
-    .hero-section-inner p{    	
-    font-size: 15px;	
-    color: white;	
-    margin: 0 0 30px 0;	
-    text-align: center;	
-    }	
-    .craft{	
-    height: 150px;	
-    width: 150px;	
-    position: absolute;	
-    top: 55px;	
-    right: 5px;	
-    }	
-    .product-selectors{	
-    width: 100%;	
-    height: 1299px;	
-    position: relative;	
-    background-color: #05274b;	
-    display: flex;	
-    }	
-    .div1{	
-    background-color: #05274b;	
-    top: -250px;	
-    left: 2.5%;	
-    }	
-    .div2{	
-    background-color: #05274b;	
-    top: -250px;	
-    left: 27.5%;	
-    }	
-    .div3{	
-    	
-    background-color: #05274b;	
-    top: -250px;	
-    right: 27.5%;	
-    }	
-    .div4{	
-    background-color: #05274b;	
-    top: -250px;	
-    right: 2.5%;	
-    }	
-    .div1, .div2, .div3, .div4 {	
-    width: 100%;	
-    height: 300px;	
-    /* position: absolute; */	
-    z-index: 2;	
-    }	
-    .div1 h2, .div2 h2{	
-    /* position: absolute; */	
-    top: 314px;	
-    left: 126px;	
-    color: white;	
-    font-size: 30px;	
-    text-align: center;	
-    margin: 0;	
-    } 	
-    .div3 h2, .div4 h2{	
-    /* position: absolute; */	
-    top: 314px;	
-    right: 126px;	
-    color: white;	
-    font-size: 30px;	
-    text-align: center;	
-    margin: 0;	
-    }	
-    .inner-div{	
-    width: 100%;	
-    height: 85%;	
-    background-color: white;	
-    position: relative ;	
-    }	
-    .inner-div img{	
-    width: 100%;	
-    height: 100%;	
-    }	
-    .section1-inner {	
-    width: 100%;	
-    height: 1300px;	
-    background-color: #251e19;	
-    box-sizing: borderbox;	
-    position: relative;	
-    }	
-    .our-products-heading{	
-    font-size: 30px;	
-    color: white;	
-    text-align: center;	
-    }	
-    .section2{	
-    width: 100%;	
-    height: 620px;	
-    position: relative;	
-    /* background-color: rgb(2, 48, 2); */	
-    display: flex;	
-    }	
-    .meat-image-outer{	
-    width: 50%;	
-    height: 800px;	
-    text-align: center;	
-    }	
-    .meat-image{	
-    width: 80%;	
-    height: 200px;	
-    position: absolute;	
-    left: 7.5%;	
-    top: 3.5%;	
-    box-shadow: 15px 15px darkslategray;	
-    	
-    }	
-    .meat-text-outer{	
-    width: 100%;	
-    height: 630px;	
-    position: absolute;	
-    left: -166px;	
-    bottom: -86px;	
-    }	
-    .meat-heading-and-text{	
-    position: absolute;	
-    left: 250px;	
-    top: 140px;	
-    width: 50%;	
-    height: auto;	
-    	
-    }	
-    .meat-heading-and-text h1{	
-    font-size: 40px;	
-    color: white;	
-    text-align: center;	
-    }	
-    .meat-heading-and-text p{	
-    font-size: 18px;	
-    color: white;	
-    text-align: center;	
-    }	
-    #beef{	
-    background-color: #05274b ;	
-    }	
-    #pork{	
-    background-color: rgb(2, 48, 2);	
-    }	
-    #chicken{	
-    background-color: white;	
-    }	
-    #chicken .meat-heading-and-text h1{	
-    font-size: 40px;	
-    color:#05274b ;	
-    }	
-    #chicken .meat-heading-and-text p{	
-    font-size: 18px;	
-    color: #05274b;	
-    }	
-    #lamb{	
-    background-color: #757575;	
-    }	
-    .learn-more{	
-    position: absolute;	
-    bottom: 22px;	
-    left: 30%;	
-    }	
-    .learn-more button{	
-    font-size: 25px;	
-    }	
-    #chicken button{	
-    background-color:#05274b ;	
-    color: white;	
-    }	
-    #pork button{	
-    background-color: #757575;	
-  	
-    }	
-    #lamb button{	
-    background-color: white;	
-    color: #05274b;	
+@media screen and (max-width: 600px){	   
+    body{   
+    padding: 0; 
+        }   
+    header{ 
+    height: 150px; 
     }
+    .foley-name{
+      float: none;
+    }   
+    
+    header h1{   
+    text-align: center; 
+    margin: 0;
+    }   
+    header h2{  
+    font-size: 15px;    
+    text-align: center; 
+    }   
+    .hero-section-inner{ 
+    height: 88px;  
+    }   
+    .hero-section-inner h1{     
+    font-size: 39px;    
+    
+    text-align: center; 
+    }   
+    .hero-section-inner p{      
+    font-size: 15px;    
+    
+    margin: 0 0 30px 0; 
+    text-align: center; 
+    }   
+    .product-selectors{ 
+    width: 100%;    
+    height: 1299px;
+    display: flex;  
+    }   
+    .div1, .div2, .div3, .div4 {    
+    width: 100%;    
+    height: 300px;  
+    position: static;
+    }   
+    .div1 h2, .div2 h2,.div3 h2, .div4 h2{ 
+    Padding: 0 ;
+    text-align: center; 
+    margin: 0;  
+    }   
+     
+    .inner-div{ 
+    height: 85%; 
+    }   
+    
+    .section1-inner {  
+    height: 1300px; 
+    }   
+    .our-products-heading{  
+    Position: static;
+    font-size: 30px;       
+    text-align: center; 
+    }   
+    .section2{  
+    
+    height: 620px;  
+    position: relative; 
+    display: flex;  
+    }   
+    .meat-image-outer{  
+    width: 50%; 
+    height: 800px;  
+    position: static;
+    text-align: center; 
+    }   
+    .meat-image{    
+    width: 80%; 
+    height: 200px;  
+    position: absolute; 
+    left: 7.5%; 
+    top: 3.5%;  
+    box-shadow: 15px 15px darkslategray;    
+        
+    }   
+    .meat-text-outer{   
+    width: 100%;    
+    height: 630px;  
+    position: absolute; 
+    left: -166px;   
+    bottom: -86px;  
+    }   
+  
+    .meat-heading-and-text h1, .meat-heading-and-text p{  
+    
+    text-align: center; 
+    }   
+    
+    .learn-more{    
+    position: absolute; 
+    bottom: 22px;   
+    left: 30%;  
+    }   
+    #menu ul{
+      display: none;
+    }
+    
+    
+    
 }
+
